# dancerr

./: .pdm-python  LICENSE  README.md  compose.yaml
.devcontainer/backend-devcontainer/: devcontainer.json
.devcontainer/selector-devcontainer/: devcontainer.json
dancerr-backend/: README.md  pyproject.toml  sound_config.yaml
dancerr-backend/src/dancerr/: main.py  models.py  sounds.py
dancerr-player/: README.md  pyproject.toml
dancerr-selector/: package.json
dancerr-selector/src/: App.tsx  main.tsx
dancerr-selector/src/api/: buttonProvider.tsx
dancerr-selector/src/components/: soundButton.tsx
